Fixed extra space in recycleables & added imgs. Vertically alinged logo/text on landing.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -94,7 +94,7 @@ h1 {
     #footer {
         position: fixed;
         width: 1em;
-        top: 14em;
+        top: 12em;
         bottom: 30%;
         left: 95%;
         padding: 0;
