--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -83,6 +83,7 @@ a {
     font-size: 12px;
     position: relative;
     top: 1rem;
+    margin-bottom: 2rem;
   }
 
   .bg_img {
