--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -16,6 +16,9 @@ body {
 
 .bottom {
     flex-direction: row;
+    align-items: center;
+    max-width: 30rem;
+    margin: 1rem auto 0 auto;
 }
 
 .yesNo {
